# nero

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  shell.nix
.github/: pull_request_template.md
.github/workflows/: rust.yaml
bitcoin-splitter/: Cargo.toml
bitcoin-splitter/src/split/: intermediate_state.rs  script.rs
bitcoin-testscripts/: Cargo.toml
bitcoin-testscripts/sage/: window_decomposition.sage
bitcoin-testscripts/src/: int_add.rs  int_mul_karatsuba.rs  int_mul_windowed.rs  int_overflowing_add.rs  lib.rs  sha256.rs  square_fibonacci.rs  u32mul.rs
bitcoin-testscripts/src/friendly/: bigint_mul.rs  int_mul.rs  mod.rs  u254.rs
bitcoin-utils/src/: comparison.rs  debug.rs  lib.rs  pseudo.rs
bitcoin-winternitz/: Cargo.toml
bitcoin-winternitz/src/: u32.rs
core/: Cargo.toml  assert.hex  disprove_0.hex  disprove_1.hex  disprove_2.hex  disprove_3.hex  disprove_4.hex  disprove_5.hex  disprove_6.hex  disprove_7.hex  disprove_8.hex  payout.hex
core/src/: lib.rs
core/src/assert/: mod.rs
core/src/disprove/: mod.rs  signing.rs  tests.rs
docs/paper/: iacrtrans.cls  nero.tex  refs.bib
integration-tests/: Cargo.toml
integration-tests/src/: fetch_balance.rs  lib.rs  operator.rs  taproot.rs
integration-tests/src/common/: mod.rs
nero-cli/: Cargo.toml
nero-cli/src/: config.rs  context.rs  main.rs
nero-cli/src/cli/: actions.rs  mod.rs
nero-core/: Cargo.toml
nero-core/src/: context.rs  lib.rs  scripts.rs
nero-core/src/assert/: mod.rs
nero-core/src/challenge/: mod.rs
nero-core/src/claim/: mod.rs  scripts.rs
(+5 files in other folders)
