[package]
name = "nero-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
bitcoincore-rpc = "0.17.0"
clap = "4.5.20"
clap-verbosity = "2.1.0"
color-eyre = "0.6.3"
dirs-next = "2.0.0"
eyre = "0.6.12"
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.19"
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber.workspace = true

bitvm2-core.path = "../core"
hex = "0.4.3"
bitcoin-testscripts = { version = "0.1.0", path = "../bitcoin-testscripts" }
bitcoin-splitter = { version = "0.1.0", path = "../bitcoin-splitter" }
bitcoin-window-mul.workspace = true
num-bigint = "0.4.6"
